fixed search not resetting when empty

--- a/WebApp/Pages/Movies.razor
+++ b/WebApp/Pages/Movies.razor
@@ -26,7 +26,7 @@ else
     <div class="container">
         <div class="row filter">
             <div class="col-md-3">
-               <select class="form-select" aria-label="Default select example"  @onchange="@HandleChange">
+                <select class="form-select" aria-label="Default select example" @onchange="@HandleChange">
                     <option disabled hidden>Sorting by...</option>
                     <AuthorizeView>
                         <option value="Favorites">Your favorite movies</option>
@@ -36,31 +36,33 @@ else
                     <option value="TitleAsc">Title A to Z</option>
                     <option value="TitleDesc">Title Z to A</option>
                 </select>
-            </div>            
+            </div>
             <div class=" col-md-7">
                 <input type="search" @bind-value="searchQuery" placeholder="Search" class="form-control" maxlength="150" />
             </div>
-               <button class="btn btn-primary" @onclick="GetMoviesBySearch">
-                    <i class="bi bi-search"></i>
-               </button>
+            <button class="btn btn-primary" @onclick="GetMoviesBySearch">
+                <i class="bi bi-search"></i>
+            </button>
         </div>
 
         <div class="row">
-             @foreach (var m in movieList.movies)
-             {
-              <div class="col-md-2 card">
-                <div >                   
-                    <a href="/MovieOverview" class="card-img" @onclick="() => MovieSelected(m.id)">
-                       <img class="movie-image" src="http://image.tmdb.org/t/p/w500/@m.poster_path">                               
-                    </a>
+            @foreach (var m in movieList.movies)
+            {
+                <div class="col-md-2 card">
+                    <div>
+                        <a href="/MovieOverview" class="card-img" @onclick="() => MovieSelected(m.id)">
+                            <img class="movie-image" src="http://image.tmdb.org/t/p/w500/@m.poster_path">
+                        </a>
+                    </div>
+                    <div class="title">
+                        <h5><a> @m.title</a></h5>
+                        <p>
+                            @m.release_date <br>
+                            (@m.vote_average / 10)
+                        </p>
+                    </div>
                 </div>
-                <div class="title">
-                    <h5 ><a> @m.title</a></h5>
-                    <p>@m.release_date <br>
-                    (@m.vote_average / 10)</p>
-                </div>
-              </div>
-             }
+            }
         </div>
 
         <div class="align-content-center" style="text-align:center">
@@ -95,8 +97,15 @@ else
 
     protected async Task GetMoviesBySearch()
     {
-        if (searchQuery == "") return;
-        movieList = await MovieService.GetMoviesBySearch(currentPage, searchQuery);
+        if (searchQuery == "")
+        {
+            currentPage = 1;
+            movieList = await GetMovies(currentPage);
+        }
+        else
+        {
+            movieList = await MovieService.GetMoviesBySearch(currentPage, searchQuery);
+        }
     }
 
     protected async Task NextPage()
