--- a/WebApp/App.razor
+++ b/WebApp/App.razor
@@ -1,4 +1,6 @@
-﻿<CascadingAuthenticationState>
+﻿  
+<CascadingAuthenticationState>
+    <CascadingBlazoredModal>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -11,4 +13,5 @@
             </LayoutView>
         </NotFound>
     </Router>
+    </CascadingBlazoredModal>
 </CascadingAuthenticationState>
