--- a/WebApp/_Imports.razor
+++ b/WebApp/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.JSInterop
 @using WebApp
 @using WebApp.Shared
+@using Blazored  
+@using Blazored.Modal  
+@using Blazored.Modal.Services 
