--- a/WebApp/Pages/Movies.razor
+++ b/WebApp/Pages/Movies.razor
@@ -27,14 +27,13 @@ else
         <div class="row filter">
             <div class="col-md-3">
                 <select class="form-select" aria-label="Default select example" @onchange="@HandleChange">
-                    <option disabled hidden>Sorting by...</option>
-                    <AuthorizeView>
-                        <option value="Favorites">Your favorite movies</option>
-                    </AuthorizeView>
                     <option value="RatingDesc">Rating High to Low</option>
                     <option value="RatingAsc">Rating Low to High</option>
                     <option value="TitleAsc">Title A to Z</option>
                     <option value="TitleDesc">Title Z to A</option>
+                    <AuthorizeView>
+                        <option value="Favorites">Your favorites</option>
+                    </AuthorizeView>
                 </select>
             </div>
             <div class=" col-md-7">
@@ -77,21 +76,38 @@ else
 @code {
     private MovieList movieList = new MovieList();
     private int currentPage = 1;
-    public string Sorting = "TopRated";
-    private bool dropDownSelect = false;
+    //public string Sorting = "TopRated";
     public string searchQuery = "";
+    private string dropdownSelectName = "RatingDesc";
 
     protected override async Task OnInitializedAsync()
     {
-        if (!dropDownSelect)
-        {
-            movieList = await GetMovies(currentPage);
-        }
+        movieList = await MovieService.GetMoviesByRatingDesc(currentPage);
     }
 
     private async Task<MovieList> GetMovies(int page)
     {
-        var result = await MovieService.GetMoviesByRatingDesc(page);
+        MovieList result = new MovieList();
+        if (dropdownSelectName.Equals("Favorites"))
+        {
+            result = await FavoriteMovieService.GetFavoriteMoviesByID(UserService.GetUserId());
+        }
+        else if (dropdownSelectName.Equals("RatingDesc"))
+        {
+            result = await MovieService.GetMoviesByRatingDesc(currentPage);
+        }
+        else if (dropdownSelectName.Equals("RatingAsc"))
+        {
+            result = await MovieService.GetMoviesByRatingAsc(currentPage);
+        }
+        else if (dropdownSelectName.Equals("TitleAsc"))
+        {
+            result = await MovieService.GetMoviesByTitleAsc(currentPage);
+        }
+        else if (dropdownSelectName.Equals("TitleDesc"))
+        {
+            result = await MovieService.GetMoviesByTitleDesc(currentPage);
+        }
         return result;
     }
 
@@ -181,25 +197,34 @@ else
     {
         if (e.Value.Equals("Favorites"))
         {
+            dropdownSelectName = "Favorites";
+            currentPage = 1;
             movieList = await FavoriteMovieService.GetFavoriteMoviesByID(UserService.GetUserId());
         }
         else if (e.Value.Equals("RatingDesc"))
         {
+            dropdownSelectName = "RatingDesc";
+            currentPage = 1;
             movieList = await MovieService.GetMoviesByRatingDesc(1);
         }
         else if (e.Value.Equals("RatingAsc"))
         {
+            dropdownSelectName = "RatingAsc";
+            currentPage = 1;
             movieList = await MovieService.GetMoviesByRatingAsc(1);
         }
         else if (e.Value.Equals("TitleAsc"))
         {
+            dropdownSelectName = "TitleAsc";
+            currentPage = 1;
             movieList = await MovieService.GetMoviesByTitleAsc(1);
         }
         else if (e.Value.Equals("TitleDesc"))
         {
+            dropdownSelectName = "TitleDesc";
+            currentPage = 1;
             movieList = await MovieService.GetMoviesByTitleDesc(1);
         }
-        dropDownSelect = true;
         await InvokeAsync(StateHasChanged);
     }
 }
