--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -30,6 +30,12 @@
                 <i class="bi bi-person-plus-fill"></i> Create Account
             </a>
         </div>
+
+        <div class="nav-item px-3">
+            <a class="nav-link" href="Statistics">
+                <i class="bi bi-bar-chart-line"></i> Statistics
+            </a>
+        </div>
     </nav>
 </div>
 
