Added page for viewing favorite lists

--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -30,6 +30,11 @@
                 <i class="bi bi-person-plus-fill"></i> Create Account
             </a>
         </div>
+        <div class="nav-item px-3">
+            <a class="nav-link" href="Favorites">
+                <i class="bi bi-person-plus-fill"></i> Favorites Lists
+            </a>
+        </div>
         <AuthorizeView>
             <div class="nav-item px-3">
                 <a class="nav-link" href="AccountSettings">
