--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -32,7 +32,7 @@
         </div>
         <div class="nav-item px-3">
             <a class="nav-link" href="Favorites">
-                <i class="bi bi-person-plus-fill"></i> Favorites Lists
+                <i class="bi bi-person-plus-fill"></i> Browse Favorites Lists
             </a>
         </div>
         <AuthorizeView>
