--- a/WebApp/Pages/Actors.razor
+++ b/WebApp/Pages/Actors.razor
@@ -9,11 +9,16 @@
 
 @if (actorList.Actors == null)
 {
-    <p>
-        <em>Loading...</em>
-    </p>
+    <div class="text-center">
+        <div class="spinner-border col-md-12" style="width: 3rem; height: 3rem;" role="status"></div>
+    </div>
 }
-
+else if (!actorList.Actors.Any())
+{
+    <div class="text-center">
+        <div class="spinner-border col-md-12" style="width: 3rem; height: 3rem;" role="status"></div>
+    </div>
+}
 else
 {
     <div class="container">
@@ -21,9 +26,16 @@ else
             <AuthorizeView>
                 <div class="col-md-3">    
                     <select class="form-select" aria-label="Default select example" @onchange="@HandleChange">
-                        <option disabled >Sorting by...</option>
-                        <option value="All">All actors</option>   
-                        <option value="Favorites">Your favorite actors</option>                   
+                        @if (isFavouriteList)
+                        {
+                            <option value="Favorites">Your favorite actors</option>  
+                            <option value="All">All actors</option>
+                        }
+                        else
+                        {
+                             <option value="All">All actors</option>   
+                             <option value="Favorites">Your favorite actors</option>
+                        }                  
                     </select>       
                 </div>
              </AuthorizeView>
@@ -96,6 +108,7 @@ else
 
     protected async Task GetFavouriteActors()
     {
+        actorList.Actors?.Clear();
         await GetFavouriteActorIds(UserService.GetUserId());
         favouriteActors.Clear();
         foreach (int id in actorIds)
@@ -209,8 +222,7 @@ else
         if (e.Value.Equals("Favorites"))
         {
             await GetFavouriteActors();
-            currentPage = 1;
-            actorList.Actors = favouriteActors;            
+            currentPage = 1;          
             favouriteListPage();
             isFavouriteList = true;
         }
@@ -231,8 +243,8 @@ else
         foreach (var item in splitedFavouriteList.Select((value, index) => new {value, index}))
         {
             if (item.index + 1 == currentPage)
-            {
-               actorList.Actors = item.value;
+            {                
+                actorList.Actors = item.value;
             }
         }
     }
